--- a/offlinedigitaleuro/src/main/res/layout/send_money_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/send_money_fragment.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/txtIntro"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
                 android:gravity="center_horizontal"
-                android:text="1234567890"
+                android:text=""
                 app:layout_constraintTop_toBottomOf="@id/txtSend" />
 
             <ImageView
