--- a/detoks/src/main/res/layout/wallet_fragment.xml
+++ b/detoks/src/main/res/layout/wallet_fragment.xml
@@ -51,26 +51,8 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/menu"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/button_create_coin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.96"
-        android:hint="Choose token value">
 
-        <AutoCompleteTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="none" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-<!--    <Spinner-->
+    <!--    <Spinner-->
 <!--        android:id="@+id/spinner_value_token"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
@@ -80,6 +62,26 @@
 <!--        app:layout_constraintBottom_toTopOf="@+id/button_create_coin"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/menu"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/button_create_coin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Choose token value"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintTop_toTopOf="@+id/tokens"
+        app:layout_constraintVertical_bias="0.984">
+
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:text="Create new coin"
@@ -123,7 +125,7 @@
         android:id="@+id/tokens"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="200dp"
         android:layout_marginTop="135dp"
         app:layout_constraintTop_toBottomOf="@+id/coins"
         android:orientation="vertical">
@@ -141,8 +143,5 @@
             app:layout_constraintHorizontal_bias="0.0" />
 
     </LinearLayout>
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
