--- a/detoks/src/main/res/layout/fragment_offline_transfer.xml
+++ b/detoks/src/main/res/layout/fragment_offline_transfer.xml
@@ -166,14 +166,15 @@
 
         <ImageView
             android:id="@+id/QR"
-            android:layout_width="303dp"
-            android:layout_height="303dp"
+            android:layout_width="382dp"
+            android:layout_height="382dp"
             android:layout_centerVertical="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.551"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.636" />
 
         <Spinner
             android:id="@+id/spinner"
