--- a/detoks/src/main/res/layout/fragment_token_list.xml
+++ b/detoks/src/main/res/layout/fragment_token_list.xml
@@ -51,7 +51,8 @@
         android:layout_height="0dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@id/menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/balanceLayout" />
@@ -68,7 +69,7 @@
         android:hint="Choose token value">
 
         <AutoCompleteTextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none" />
 
