--- a/detoks/src/main/res/layout/strategy_recycle_view.xml
+++ b/detoks/src/main/res/layout/strategy_recycle_view.xml
@@ -65,6 +65,20 @@
             android:text=""
             android:textAlignment="center" />
 
+        <View
+            android:id="@+id/view5"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#373737" />
+
+        <TextView
+            android:id="@+id/seedRank"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textAlignment="center" />
+
     </LinearLayout>
 
 </LinearLayout>
