--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -21,11 +21,20 @@
         android:label="Strategy">
         <action android:id="@+id/action_toTorrentFragment"
             app:destination="@id/torrentFragment"/>
+        <action
+            android:id="@+id/action_strategyFragment_to_DebugSeedingFragment"
+            app:destination="@id/DebugSeedingFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/torrentFragment"
         android:name="nl.tudelft.trustchain.detoks.TorrentFragment"
+        android:label="Torrent">
+    </fragment>
+
+    <fragment
+        android:id="@+id/DebugSeedingFragment"
+        android:name="nl.tudelft.trustchain.detoks.SeedingDebugFragment"
         android:label="Torrent">
     </fragment>
 </navigation>
