--- a/detoks/src/main/res/layout/fragment_detoks_debug.xml
+++ b/detoks/src/main/res/layout/fragment_detoks_debug.xml
@@ -83,7 +83,7 @@
 
     <TextView
         android:id="@+id/peerIdTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
