--- a/detoks/src/main/res/layout/debug_recycle_view.xml
+++ b/detoks/src/main/res/layout/debug_recycle_view.xml
@@ -51,6 +51,34 @@
             android:text=""
             android:textAlignment="center" />
 
+        <View
+            android:id="@+id/view15"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#373737" />
+
+        <TextView
+            android:id="@+id/nrSeeds"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textAlignment="center" />
+
+        <View
+            android:id="@+id/view16"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#373737" />
+
+        <TextView
+            android:id="@+id/nrLeechers"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textAlignment="center" />
+
 <!--        <View-->
 <!--            android:id="@+id/view"-->
 <!--            android:layout_width="1dp"-->
