--- a/offlinedigitaleuro/src/main/res/layout/send_money_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/send_money_fragment.xml
@@ -46,8 +46,8 @@
 
             <ImageView
                 android:id="@+id/qrImageView"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="450dp"
+                android:layout_height="450dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
