--- a/offlinedigitaleuro/src/main/res/layout/transactions_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/transactions_fragment.xml
@@ -39,14 +39,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/trustScoresRecyclerView"
-        android:layout_width="match_parent"
+        android:id="@+id/transactionsHistoryRecyclerView"
+        app:layout_constraintTop_toBottomOf="@id/titleLayout"
         android:layout_height="0dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleLayout" />
+        android:layout_width="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
