--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nl.tudelft.trustchain.explorer.ui.MainActivity">
+    tools:context="nl.tudelft.trustchain.app.ui.dashboard.DashboardActivity">
 
     <!--com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
