--- a/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
@@ -165,7 +165,7 @@
                         android:id="@+id/ivTransactionIconOutgoing"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/ic_arrow_drop_down_black_16dp"
+                        android:src="@drawable/ic_arrow_down"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +177,7 @@
                         android:id="@+id/ivTransactionIconIncoming"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/ic_arrow_drop_up_black_16dp"
+                        android:src="@drawable/ic_arrow_up"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
