Replace syntehtic bindings to viewbindings in `currencyii`

--- a/currencyii/src/main/res/layout/fragment_dao_wallet_load_form.xml
+++ b/currencyii/src/main/res/layout/fragment_dao_wallet_load_form.xml
@@ -118,7 +118,7 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <include layout="@layout/bitcoin_networks"/>
+                <include android:id="@+id/bitcoin_networks_layout" layout="@layout/bitcoin_networks"/>
 
             </LinearLayout>
 
