--- a/currencyii/src/main/res/layout/fragment_import_keys.xml
+++ b/currencyii/src/main/res/layout/fragment_import_keys.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10px"
-    tools:context=".ImportKeysFragment">
+    tools:context=".ui.bitcoin.ImportKeysFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:text="Fill in your address details" />
 
-        <include layout="@layout/bitcoin_networks"/>
+        <include android:id="@+id/bitcoin_networks_layout" layout="@layout/bitcoin_networks" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
