--- a/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
+++ b/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            >
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <FrameLayout
                 android:id="@+id/frameLayout"
@@ -32,25 +31,24 @@
                     android:id="@+id/download_progress"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:scaleType="fitCenter"
                     android:layout_gravity="center"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/ic_baseline_arrow_circle_down_24"
-                    />
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_baseline_arrow_circle_down_24" />
 
                 <TextView
                     android:id="@+id/download_count"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="end|top"
-                    android:layout_marginEnd="-5dp"
                     android:layout_marginTop="3dp"
+                    android:layout_marginEnd="-5dp"
                     android:background="@drawable/rounded_corner"
                     android:gravity="center"
                     android:padding="3dp"
-                    android:textColor="@android:color/white"
                     android:text="@string/downloadsInProgress"
-                    android:textSize="10sp"/>
+                    android:textColor="@android:color/white"
+                    android:textSize="10sp" />
 
             </FrameLayout>
 
@@ -67,11 +65,10 @@
                     android:id="@+id/debugPopUpButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:scaleType="fitCenter"
                     android:layout_gravity="center"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/ic_baseline_info_24"
-                    />
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_baseline_info_24" />
             </FrameLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -86,18 +83,18 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:tint="#8f8c83"
-                app:srcCompat="@drawable/ic_baseline_search_24" />
+                app:srcCompat="@drawable/ic_baseline_search_24"
+                app:tint="#8f8c83" />
 
             <EditText
                 android:id="@+id/search_bar_input"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:backgroundTint="#8f8c83"
-                android:singleLine="true"
+                android:ems="10"
                 android:hint="@string/SearchHint"
                 android:inputType="textPersonName"
+                android:singleLine="true"
                 android:textColor="#8f8c83"
                 android:textColorHint="#8f8c83" />
 
@@ -106,26 +103,35 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="@string/torrentCount"
                 android:paddingEnd="10dp"
+                android:text="@string/torrentCount"
                 android:textColor="#8f8c83" />
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_main_activity_foc" />
-    <include layout="@layout/fragment_debugging" android:visibility="gone"/>
-    <include layout="@layout/fragment_download" android:visibility="gone"/>
+    <include
+        android:id="@+id/content_main_activity_foc_layout"
+        layout="@layout/content_main_activity_foc" />
+
+    <include
+        android:id="@+id/debugLayout"
+        layout="@layout/fragment_debugging"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/popUpLayout"
+        layout="@layout/fragment_download"
+        android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_baseline_add_24"
-        android:contentDescription="@string/addButtonDescription"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/blue"
-        />
+        android:contentDescription="@string/addButtonDescription"
+        android:src="@drawable/ic_baseline_add_24"
+        app:backgroundTint="@color/blue" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
