--- a/valuetransfer/src/main/res/layout/item_identity.xml
+++ b/valuetransfer/src/main/res/layout/item_identity.xml
@@ -27,61 +27,63 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-<!--        <ImageView-->
-<!--            android:id="@+id/ivGoToIdentity"-->
-<!--            android:layout_width="30dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_marginTop="2dp"-->
-<!--            android:layout_marginEnd="8dp"-->
-<!--            android:padding="4dp"-->
-<!--            android:src="@drawable/ic_baseline_arrow_forward_ios_24"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/tvIdentityTitle"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/tvIdentityTitle"-->
-<!--            app:tint="?attr/onBackgroundSecondaryColor" />-->
+        <!--        <ImageView-->
+        <!--            android:id="@+id/ivGoToIdentity"-->
+        <!--            android:layout_width="30dp"-->
+        <!--            android:layout_height="30dp"-->
+        <!--            android:layout_marginTop="2dp"-->
+        <!--            android:layout_marginEnd="8dp"-->
+        <!--            android:padding="4dp"-->
+        <!--            android:src="@drawable/ic_baseline_arrow_forward_ios_24"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@+id/tvIdentityTitle"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="@+id/tvIdentityTitle"-->
+        <!--            app:tint="?attr/onBackgroundSecondaryColor" />-->
 
         <FrameLayout
             android:id="@+id/flIdenticon"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:layout_marginStart="12dp"
-            android:padding="2dp"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="@dimen/cornerRadius"
             android:background="@drawable/pill_rounded"
-            tools:backgroundTint="@color/colorPrimaryValueTransfer"
+            android:padding="2dp"
+            app:cardCornerRadius="@dimen/cornerRadius"
+            app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clNamePublicKey"
-            app:layout_constraintTop_toBottomOf="@+id/tvIdentityTitle">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvIdentityTitle"
+            tools:backgroundTint="@color/colorPrimaryValueTransfer">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:cardElevation="0dp"
+                android:background="@drawable/pill_rounded"
                 app:cardCornerRadius="@dimen/cornerRadius"
-                android:background="@drawable/pill_rounded">
+                app:cardElevation="0dp">
+
                 <ImageView
                     android:id="@+id/ivIdenticon"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="10dp"
-                    tools:src="@drawable/ic_contact"
-                    android:adjustViewBounds="true"
                     android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:padding="10dp"
                     android:visibility="gone"
+                    tools:src="@drawable/ic_contact"
                     tools:visibility="visible" />
+
                 <ImageView
                     android:id="@+id/ivIdentityPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:src="@drawable/ic_contact"
+                    android:layout_gravity="center"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    android:layout_gravity="center"
                     android:visibility="gone"
+                    tools:src="@drawable/ic_contact"
                     tools:visibility="visible" />
             </androidx.cardview.widget.CardView>
         </FrameLayout>
@@ -92,17 +94,17 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             app:layout_constraintBottom_toBottomOf="@+id/flIdenticon"
-            app:layout_constraintStart_toEndOf="@+id/flIdenticon"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/flIdenticon"
             app:layout_constraintTop_toTopOf="@+id/flIdenticon">
 
             <RelativeLayout
                 android:id="@+id/rlNameStatus"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/tvIdentityGivenNamesSurname"
@@ -130,21 +132,21 @@
                         android:id="@+id/ivContactUnverifiedStatus"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
-                        android:src="@drawable/ic_verified_not_smaller"
-                        app:tint="?attr/colorError"
                         android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_verified_not_smaller"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        app:tint="?attr/colorError"
+                        tools:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/ivContactVerifiedStatus"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
-                        android:src="@drawable/ic_verified_smaller"
-                        app:tint="?attr/colorAccent"
                         android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_verified_smaller"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        app:tint="?attr/colorAccent"
+                        tools:visibility="visible" />
                 </FrameLayout>
             </RelativeLayout>
 
@@ -167,12 +169,12 @@
             android:id="@+id/rlScanIdentityQR"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintDimensionRatio="H1,1"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/pill_rounded"
             android:backgroundTint="?attr/backgroundColor"
             android:padding="6dp"
+            app:layout_constraintDimensionRatio="H1,1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
