used debug window from the other group https://github.com/Tribler/trustchain-superapp/compare/master...KolevVelyan:trustchain-superapp:master

--- a/debug/src/main/res/menu/debug_options.xml
+++ b/debug/src/main/res/menu/debug_options.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/multiPunch"
         android:title="NAT Puncturing" />
+    <item
+        android:id="@+id/uTPBatch"
+        android:title="uTP Batch Send" />
 </menu>
