--- a/debug/src/main/res/navigation/nav_graph_debug.xml
+++ b/debug/src/main/res/navigation/nav_graph_debug.xml
@@ -24,4 +24,8 @@
         android:id="@+id/punctureFragment"
         android:name="nl.tudelft.trustchain.debug.PunctureFragment"
         android:label="NAT Puncturing" />
+    <fragment
+        android:id="@+id/uTPBatchFragment"
+        android:name="nl.tudelft.trustchain.debug.uTPBatchFragment"
+        android:label="uTP Batch Send" />
 </navigation>
