rename class for linter

--- a/debug/src/main/res/navigation/nav_graph_debug.xml
+++ b/debug/src/main/res/navigation/nav_graph_debug.xml
@@ -26,6 +26,6 @@
         android:label="NAT Puncturing" />
     <fragment
         android:id="@+id/uTPBatchFragment"
-        android:name="nl.tudelft.trustchain.debug.uTPBatchFragment"
+        android:name="nl.tudelft.trustchain.debug.UtpBatchFragment"
         android:label="uTP Batch Send" />
 </navigation>
