--- a/debug/src/main/res/menu/debug_options.xml
+++ b/debug/src/main/res/menu/debug_options.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/utpTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="Test uTP Connection" />
+    <item
         android:id="@+id/wanLog"
         android:title="WAN Log" />
     <item
